Completed project. Fixed the last bugs

--- a/src/main/resources/templates/fragments/components/projectResourcesList.html
+++ b/src/main/resources/templates/fragments/components/projectResourcesList.html
@@ -78,10 +78,9 @@
                         </div>
                         <div class="tab-pane" th:aria-labelledby="${'tab-c-comments_'+resource.getId()}"  th:id="${'tab-comments_'+resource.getId()}" role="tabpanel">
                             <div class="scroll-area-sm">
-                                <div class="scrollbar-container" th:with="prevUser=${resource.getComments()[0].getUserId()}">
+                                <div class="scrollbar-container" th:with="prevUser=${resource.getFirstCommentedUserId()}">
                                     <div th:remove="tag" th:each="com, itemStat : ${resource.getComments()}">
                                         <div class="chat-wrapper">
-<!--                                            <div th:classappend="${itemStat.index % 2 != 0} ? 'float-right' : ''">-->
                                             <div th:classappend="${com.getUserId()!=prevUser} ? 'float-right' : ''">
                                                 <div class="chat-box-wrapper" th:classappend="${com.getUserId()!=prevUser} ? 'chat-box-wrapper-right' : ''">
                                                     <div th:with="prevUser=${curUser}">
@@ -112,232 +111,11 @@
                                     <button type="submit" class="btn btn-primary">Δημοσίευση</button>
                                 </form>
                             </div>
-
-<!--                            <div class="scroll-area-sm">-->
-<!--                                <div class="scrollbar-container ps">-->
-<!--                                    <div class="p-3">-->
-<!--                                        <div class="vertical-without-time vertical-timeline vertical-timeline&#45;&#45;animate vertical-timeline&#45;&#45;one-column">-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--         <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-success"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title">All Hands Meeting</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sic amet, today at-->
-<!--                                                            <a href="javascript:void(0);">12:00 PM</a>-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-warning"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <p>Another meeting today, at-->
-<!--                                                            <b class="text-danger">12:00 PM</b>-->
-<!--                                                        </p>-->
-<!--                                                        <p>Yet another one, at-->
-<!--                                                            <span class="text-success">15:00 PM</span>-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-danger"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title">Build the production release</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sit amit,consectetur eiusmdd tempor-->
-<!--                                                            incididunt ut labore et dolore magna elit enim at-->
-<!--                                                            minim veniam quis nostrud-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-primary"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title text-success">Something not important</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sit amit,consectetur elit enim at-->
-<!--                                                            minim veniam quis nostrud-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-success"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title">All Hands Meeting</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sic amet, today at-->
-<!--                                                            <a href="javascript:void(0);">12:00 PM</a>-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-warning"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <p>Another meeting today, at-->
-<!--                                                            <b class="text-danger">12:00 PM</b>-->
-<!--                                                        </p>-->
-<!--                                                        <p>Yet another one, at-->
-<!--                                                            <span class="text-success">15:00 PM</span>-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-danger"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title">Build the production release</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sit amit,consectetur eiusmdd tempor-->
-<!--                                                            incididunt ut labore et dolore magna elit enim at-->
-<!--                                                            minim veniam quis nostrud-->
-<!--                                                        </p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                            <div class="vertical-timeline-item vertical-timeline-element">-->
-<!--                                                <div>-->
-<!--        <span class="vertical-timeline-element-icon bounce-in">-->
-<!--        <i class="badge badge-dot badge-dot-xl badge-primary"></i>-->
-<!--        </span>-->
-<!--                                                    <div class="vertical-timeline-element-content bounce-in">-->
-<!--                                                        <h4 class="timeline-title text-success">Something not important</h4>-->
-<!--                                                        <p>Lorem ipsum dolor sit amit,consectetur elit enim at-->
-<!--                                                            minim veniam quis nostrud</p>-->
-<!--                                                        <span class="vertical-timeline-element-date"></span>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 0px;"></div></div></div>-->
-<!--                            </div>-->
-
-
-
                         </div>
                     </div>
                 </div>
                 </div>
             </div>
         </div>
-
-
-
-
-
-<!--                <div class="p-5 bg-midnight-bloom" th:each="resource : ${project.getFileResources()}">-->
-<!--                    <div class="slider-content card-shadow-primary card-border mb-3 card">-->
-<!--                        <div class="dropdown-menu-header">-->
-<!--                            <div class="dropdown-menu-header-inner bg-midnight-bloom">-->
-<!--                                <div class="menu-header-content">-->
-<!--                                    <div class="avatar-icon-wrapper btn-hover-shine mb-2 avatar-icon-xl">-->
-<!--                                        <div class="avatar-icon rounded">-->
-<!--                                            <img src="assets/images/avatars/1.jpg" alt="File Type"-->
-<!--                                                 th:src="@{/img/ftypes/{img}(img=${resource.getTypeString()})}">-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div>-->
-<!--                                        <h5 class="menu-header-title" th:text="${resource.getTitle()}">Title</h5>-->
-<!--                                    </div>-->
-<!--                                    <div class="menu-header-btn-pane pt-2">-->
-<!--                                        <div role="group" class="btn-group text-center">-->
-<!--                                            <div class="nav">-->
-<!--                                                <button class="btn-icon btn-icon-only btn btn-link" data-toggle="modal"-->
-<!--                                                        th:data-target="${'#res_modal_'+resource.getId()}">-->
-<!--                                                    <i class="pe-7s-close-circle fsize-3 icon-gradient bg-love-kiss"> </i>-->
-<!--                                                </button>-->
-<!--                                                <a th:href="@{/resource/download/{rid}(rid=${resource.getId()})}">-->
-<!--                                                    <button class="btn-icon btn-icon-only btn btn-link">-->
-<!--                                                        <i class="pe-7s-download fsize-3 btn-icon-wrapper"> </i>-->
-<!--                                                    </button>-->
-<!--                                                </a>-->
-<!--                                                <a href="#tab0_" th:href="${'#tab0_'+resource.getId()}" data-toggle="tab"-->
-<!--                                                   class="btn-warning active btn btn-outline-alternate btn-sm">x</a>-->
-<!--                                                <a href="#tab1_" th:href="${'#tab1_'+resource.getId()}" data-toggle="tab"-->
-<!--                                                   class="btn-warning mr-1 ml-1  btn btn-outline-alternate btn-sm">Σχόλια</a>-->
-<!--                                                <a href="#tab2_" th:href="${'#tab2_'+resource.getId()}" data-toggle="tab"-->
-<!--                                                   class="btn-warning btn btn-outline-alternate btn-sm">Περιγραφή</a>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="p-0 card-body">-->
-<!--                            <div class="tab-content">-->
-<!--                                <div class="tab-pane" id="tab0_" th:id="${'tab0_'+resource.getId()}">-->
-<!--                                </div>-->
-<!--                                <div class="tab-pane" id="tab1_" th:id="${'tab1_'+resource.getId()}">-->
-<!--                                    <div class="scroll-area-sm">-->
-<!--                                        <div class="scrollbar-container">-->
-<!--                                            <div th:each="com : ${resource.getComments()}">-->
-<!--                                                <div class="chat-wrapper">-->
-<!--                                                    <div class="chat-box-wrapper">-->
-<!--                                                        <div>-->
-<!--                                                            <div class="avatar-icon-wrapper mr-1">-->
-<!--                                                                <div class="avatar-icon avatar-icon-sm rounded">-->
-<!--                                                                    <img th:src="@{/img/avatars/{img}(img=${com.getUser().getProfilePic()})}">-->
-<!--                                                                </div>-->
-<!--                                                            </div>-->
-<!--                                                        </div>-->
-<!--                                                        <div>-->
-<!--                                                            <div class="chat-box" th:text="${com.getDescription()}"></div>-->
-<!--                                                            <small class="opacity-6">-->
-<!--                                                                <i class="fa fa-calendar-alt mr-1"></i>-->
-<!--                                                                <span th:text="${com.getDateOnly()}">11:01 AM</span>-->
-<!--                                                            </small>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <div class="card-footer">-->
-<!--                                        <form action="#" th:action="@{/resource/{rid}/addComment(rid=${resource.getId()})}" method="post">-->
-<!--                                            <input name="comment" id="comment" placeholder="Σχόλιο και μετά enter..."-->
-<!--                                                   type="text" class="form-control-sm form-control">-->
-<!--                                        </form>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="tab-pane" id="tab2_" th:id="${'tab2_'+resource.getId()}">-->
-<!--                                    <div class="p-3">-->
-<!--                                        <p class="mb-0" th:text="${resource.getDescription()}">description</p>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--             </div>-->
-<!--        </div>-->
-
-
     </div>
 </div>
