--- a/src/main/resources/templates/project/views/findingsCollection.html
+++ b/src/main/resources/templates/project/views/findingsCollection.html
@@ -11,10 +11,10 @@
             <div class="page-title-wrapper">
                 <div class="page-title-heading">
                     <div class="page-title-icon">
-                        <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
+                        <i class="pe-7s-search icon-gradient bg-mean-fruit"></i>
                     </div>
                     <div><span th:text="${project.getName()}"></span>
-                        <div class="page-title-subheading"><span th:text="'Τρέχων στάδιο'+${project.getStatus()}"></span></div>
+                        <div class="page-title-subheading"><span th:text="${project.getStatus()}"></span></div>
                     </div>
                 </div>
                 <div class="page-title-actions">
@@ -26,19 +26,25 @@
             </div>
         </div>
         <!-- END OF MAIN CONTENT TITLE -->
+       <!-- Findings List component -->
+        <th:block layout:insert="~{fragments/components/projectFindingsList}"/>
         <div class="row">
-            <!-- Findings List component -->
-            <th:block layout:insert="~{fragments/components/projectFindingsList}"/>
-            <!-- project timeline component -->
-            <th:block layout:insert="~{fragments/components/projectTimeline}"/>
-            <!-- Member List component -->
-            <th:block layout:insert="~{fragments/components/projectMemberList}"/>
+            <div class="col-sm-12 col-lg-6 col-xl-5">
+                <!-- Member List component -->
+                <th:block layout:insert="~{fragments/components/projectMemberList}"/>
+            </div>
+            <div class="col-sm-12 col-lg-6 col-xl-5">
+                <!-- project timeline component -->
+                <th:block layout:insert="~{fragments/components/projectTimeline}"/>
+            </div>
+
         </div>
     </div>
         <!-- Add member modal -->
         <th:block layout:insert="~{fragments/modals/addMembers}"/>
         <!-- Delete confirmation modals -->
         <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
+        <th:block layout:insert="~{fragments/modals/removeFindingConfirm}"/>
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
         <!-- Previous stage confirmation modal -->
