--- a/src/main/resources/templates/fragments/components/projectFindingsList2.html
+++ b/src/main/resources/templates/fragments/components/projectFindingsList2.html
@@ -4,15 +4,6 @@
             <i class="header-icon pe-7s-look icon-gradient bg-amy-crisp"></i>
             Διαπιστώσεις
         </div>
-        <div class="btn-actions-pane-right text-capitalize actions-icon-btn">
-            <div class="btn-group dropdown">
-                <a th:href="@{/project/{pid}/finding/new(pid=${project.getId()})}">
-                    <button type="button" title="Νέα διαπίστωση" class="btn-shadow mr-3 btn btn-alternate">
-                        <i class="fa fa-plus"></i>
-                    </button>
-                </a>
-            </div>
-        </div>
     </div>
     <div class="card-body">
         <div id="example_wrapper" class="dataTables_wrapper dt-bootstrap4">
@@ -31,30 +22,10 @@
                     </thead>
                     <tbody>
                         <tr th:each="finding : ${findings}">
-<!--                            <td th:text="${finding.getTitle()}">-->
-                            <td>
-                                <div class="widget-content p-0">
-                                    <div class="widget-content-wrapper">
-                                        <div class="widget-content-left flex2">
-                                            <div th:text="${finding.getTitle()}" class="widget-heading">
-                                                Τίτλος
-                                            </div>
-                                        </div>
-                                        <div class="widget-content-right widget-content-actions">
-                                            <button class="border-0 btn-transition btn btn-outline-danger"
-                                                    th:if="${userId==finding.getUser.getId()
-                                                    or isManager == true}" data-toggle="modal" title="Διαγραφή Διαπίστωσης"
-                                                    th:data-target="${'#find_modal_'+finding.getId()}">
-                                                <i class="fa fa-trash-alt"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
+                            <td th:text="${finding.getTitle()}">Τίτλος</td>
                             <td th:text="${finding.getDescription()}">Περιγραφή</td>
                             <td th:text="${finding.getUserFullName()}">Χρήστης</td>
                             <td th:text="${finding.getDateOnly()}">1/1/2020</td>
-
                             <td class="text-center" style="width: 200px;">
                                 <div class="widget-content p-0">
                                     <div class="widget-content-outer">
@@ -63,24 +34,14 @@
                                                 <div class="widget-numbers fsize-1 text-danger" th:text="${finding.getLikes()}"></div>
                                             </div>
                                             <div class="widget-content-right w-100">
-                                                <div class="progress-bar-xs progress">
-                                                    <div th:if="${project.getTotalFindingLikes() > 0}" class="progress-bar progress" role="progressbar"
+                                                    <div class="progress-bar-xs progress">
+                                                    <div class="progress-bar progress" role="progressbar"
                                                          th:aria-valuenow="${finding.getLikes()}" aria-valuemin="0"
                                                          th:aria-valuemax="${project.getTotalFindingLikes()}"
                                                          th:style="'width:'+100*${finding.getLikes()}/${project.getTotalFindingLikes()}+'%;'">
                                                     </div>
-                                                    <div th:if="${project.getTotalFindingLikes() == 0}" class="progress-bar progress" role="progressbar"
-                                                         aria-valuenow="0" aria-valuemin="0" aria-valuemax="0"
-                                                         style="width: 100%;">
-                                                    </div>
                                                 </div>
                                             </div>&nbsp;&nbsp;
-                                            <a th:href="@{/project/{pid}/finding/{fid}/like(pid=${project.getId()}, fid=${finding.getId()})}">
-                                                <button class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary">
-                                                    <i class="pe-7s-like2 btn-icon-wrapper"> </i>
-                                                </button>
-                                            </a>
-
                                         </div>
                                     </div>
                                 </div>
