--- a/src/main/resources/templates/fragments/components/projectIdeasList.html
+++ b/src/main/resources/templates/fragments/components/projectIdeasList.html
@@ -1,75 +1,97 @@
-<div xmlns:th="http://www.thymeleaf.org">
-
-    <div class="main-card mb-3 card">
-        <div class="card-body">
-            <div id="example_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row"><div class="col-sm-12">
-                    <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered dataTable dtr-inline" role="grid" aria-describedby="example_info">
-                        <thead>
-                        <tr role="row">
-                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 383.2px;" aria-label="Position: activate to sort column ascending">Ιδέα</th>
-                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 92.4px;" aria-label="Office: activate to sort column ascending">Χρήστης</th>
-                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 95.4px;" aria-label="Start date: activate to sort column ascending">Ημερομηνία</th>
-                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 70.2px;" aria-label="Salary: activate to sort column ascending">Ψήφοι</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr role="row" class="odd">
-                            <td class="sorting_1 dtr-control">Ιδέα!</td>
-                            <td>Sokratis</td>
-                            <td>22/05/2020</td>
-                            <td class="text-center" style="width: 200px;">
-                                <div class="widget-content p-0">
-                                    <div class="widget-content-outer">
-                                        <div class="widget-content-wrapper">
-                                            <div class="widget-content-left pr-2">
-                                                <div class="widget-numbers fsize-1 text-danger">67</div>
+<div class="row" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+    <div class="col-sm-7 col-md-7 col-lg-7 col-xl-7">
+        <div class="main-card">
+<!--        <div class="main-card mb-3 card">-->
+            <div class="grid-menu grid-menu-2col">
+                <div class="no-gutters row">
+                    <div class="col-sm-6" th:each="idea : ${ideas}">
+                        <div class="widget-chart widget-chart-hover profile-responsive">
+                            <div class="card-header-tab card-header">
+                                <div class="card-header-title font-size-lg text-capitalize font-weight-normal" th:text="${idea.getTitle()}">Title</div>
+                                <div class="btn-actions-pane-right text-capitalize actions-icon-btn">
+                                    <div class="btn-group dropdown">
+                                        <button class="mb-2 mr-2 btn-icon btn-icon-only btn btn-link btn-sm">
+                                            <i class="lnr-heart btn-icon-wrapper font-size-xlg"> </i>
+                                            <span class="badge badge-pill badge-success" th:text="${idea.getReactionsCount()}">0</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+<!--                            <h5 class="menu-header-title" th:text="${idea.getTitle()}">Title</h5>-->
+                            <div class="card-body" >
+                                <p th:text="${idea.getContent()}">Content</p>
+                            </div>
+                            <div class="p-0 d-block card-footer">
+                                <div class="grid-menu grid-menu-2col">
+                                    <div class="no-gutters row">
+                                        <div class="col-sm-6">
+                                            <div class="p-1">
+                                                <a style="text-decoration: none;" th:href="@{/project/idea/{iid}/like(iid=${idea.getId()})}">
+                                                <button class="btn-icon-vertical btn-transition-text btn-transition btn-transition-alt pt-2 pb-2 btn btn-outline-danger">
+                                                    <i class="lnr-heart text-danger opacity-7 btn-icon-wrapper mb-2"></i> Μου αρέσει!
+                                                </button>
+                                                </a>
                                             </div>
-                                            <div class="widget-content-right w-100">
-                                                <div class="progress-bar-xs progress">
-                                                    <div class="progress-bar bg-info" role="progressbar"
-                                                         aria-valuenow="67" aria-valuemin="0" aria-valuemax="100"
-                                                         style="width: 67%;">
-                                                    </div>
-                                                </div>
-                                            </div> &nbsp;&nbsp;
-                                            <button class="mb-2 mr-2 btn-icon btn-icon-only btn-shadow btn-outline-2x btn btn-outline-warning">
-                                                <i class="pe-7s-like2 btn-icon-wrapper"></i>
-                                            </button>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="p-1">
+                                                <button data-toggle="modal" th:data-target="${'#modalIdeaCom_'+idea.getId()}"
+                                                        class="btn-icon-vertical btn-transition-text btn-transition btn-transition-alt pt-2 pb-2 btn btn-outline-dark">
+                                                    <i class="lnr-bullhorn text-danger opacity-7 btn-icon-wrapper mb-2"></i> Νέο Σχόλιο
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </td>
-                        </tr>
-                        <tr role="row" class="even">
-                            <td class="sorting_1 dtr-control">Ιδέα!</td>
-                            <td>Vassilis</td>
-                            <td>23/05/2020</td>
-                            <td class="text-center" style="width: 200px;">
-                                <div class="widget-content p-0">
-                                    <div class="widget-content-outer">
-                                        <div class="widget-content-wrapper">
-                                            <div class="widget-content-left pr-2">
-                                                <div class="widget-numbers fsize-1 text-danger">42</div>
-                                            </div>
-                                            <div class="widget-content-right w-100">
-                                                <div class="progress-bar-xs progress">
-                                                    <div class="progress-bar bg-info" role="progressbar"
-                                                         aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"
-                                                         style="width: 42%;">
-                                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <a style="text-decoration: none;" class="dot-btn-wrapper" th:href="@{/project/{pid}/idea/new(pid=${project.getId()})}">
+                            <div class="widget-chart widget-chart-hover br-br">
+                                <div class="icon-wrapper">
+                                    <i class="dot-btn-icon lnr-pencil icon-gradient bg-midnight-bloom"></i>
+                                </div>
+                                <div class="widget-numbers">Νέα Ιδέα</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-5 col-md-5 col-lg-5 col-xl-5">
+        <div class="main-card mb-3 card">
+            <div class="card-header-tab card-header">
+                <div class="card-header-title">
+                    <i class="header-icon lnr-bubble icon-gradient bg-tempting-azure"> </i>
+                    Συζήτηση
+                </div>
+            </div>
+            <div class="pt-2 pb-0 card-body">
+                <div class="chat-wrapper scroll-area-lg">
+                    <div class="scrollbar-container" th:with="prevUser=${firstCommentUser}">
+                        <div th:remove="tag" th:each="com, itemStat : ${comments}">
+                                <div th:classappend="${com.getUserId()!=prevUser} ? 'float-right' : ''">
+                                    <div class="chat-box-wrapper" th:classappend="${com.getUserId()!=prevUser} ? 'chat-box-wrapper-right' : ''">
+                                        <div th:with="prevUser=${curUser}">
+                                            <div class="avatar-icon-wrapper mr-1">
+                                                <div class="avatar-icon avatar-icon-sm rounded">
+                                                    <img th:src="@{/user/{id}/avatar(id=${com.getUserId()})}">
                                                 </div>
-                                            </div> &nbsp;&nbsp;
-                                            <button class="mb-2 mr-2 btn-icon btn-icon-only btn-shadow btn-outline-2x btn btn-outline-warning">
-                                                <i class="pe-7s-like2 btn-icon-wrapper"></i>
-                                            </button>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="chat-box" th:text="${com.getDescription()}"></div>
+                                            <small class="opacity-6">
+                                                <i class="fa fa-calendar-alt mr-1" th:text="${com.getDateOnly()}"></i>
+                                            </small>
                                         </div>
                                     </div>
                                 </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table></div></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
