--- a/src/main/resources/templates/project/views/ideaCreation.html
+++ b/src/main/resources/templates/project/views/ideaCreation.html
@@ -11,17 +11,11 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
+                            <i class="pe-7s-light icon-gradient bg-mean-fruit"></i>
                         </div>
                         <div><span th:text="${project.getName()}"></span>
-                            <div class="page-title-subheading"><span th:text="'Τρέχων στάδιο'+${project.getStatus()}"></span></div>
+                            <div class="page-title-subheading"><span th:text="${project.getStatus()}"></span></div>
                         </div>
-                    </div>
-                    <div class="page-title-actions">
-                        <button type="button" data-toggle="tooltip modal" data-target="#addFindingModal" title="" data-placement="bottom"
-                                class="btn-shadow mr-3 btn btn-alternate" data-original-title="Νέα Ιδέα">
-                            <i class="fa fa-lightbulb"></i>
-                        </button>
                     </div>
                 </div>
             </div>
@@ -30,16 +24,23 @@
                 <!-- Ideas List component -->
                 <th:block layout:insert="~{fragments/components/projectIdeasList}"/>
                 <!-- Findings List component -->
-                <th:block layout:insert="~{fragments/components/projectFindingsList}"/>
+                <th:block layout:insert="~{fragments/components/projectFindingsList2}"/>
                 <!-- Member List component -->
+                <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3" >
                 <th:block layout:insert="~{fragments/components/projectMemberList}"/>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4" >
                 <!-- project timeline component -->
                 <th:block layout:insert="~{fragments/components/projectTimeline}"/>
+                </div>
             </div>
         </div>
         <!-- Add member modal -->
         <th:block layout:insert="~{fragments/modals/addMembers}"/>
+        <!-- Add idea comment modal -->
+        <th:block layout:insert="~{fragments/modals/addIdeaComment}"/>
         <!-- Delete confirmation modals -->
+        <th:block layout:insert="~{fragments/modals/removeIdeaConfirm}"/>
         <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
